apps/prow/cluster/crier_deployment.yaml
# Copyright 2021 The Kubernetes Authors All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: prow
  name: crier
  labels:
    app: crier
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crier
  template:
    metadata:
      labels:
        app: crier
    spec:
      serviceAccountName: crier
      terminationGracePeriodSeconds: 30
      containers:
      - name: crier
        image: gcr.io/k8s-prow/crier:v20210817-4fcf86cac1
        args:
        - --blob-storage-workers=1
        - --config-path=/etc/config/config.yaml
        - --github-endpoint=http://ghproxy.prow.svc.cluster.local
        - --github-endpoint=https://api.github.com
        - --github-token-path=/etc/github/token
        - --github-workers=5
        - --job-config-path=/etc/job-config
        - --kubeconfig=/etc/kubeconfig/kubeconfig
        - --kubernetes-blob-storage-workers=1
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - "ALL"
          privileged: false
          readOnlyRootFilesystem: true
        volumeMounts:
        - mountPath: /etc/kubeconfig
          name: kubeconfig
          readOnly: true
        - name: config
          mountPath: /etc/config
          readOnly: true
        - name: job-config
          mountPath: /etc/job-config
          readOnly: true
        - name: github-token
          mountPath: /etc/github
          readOnly: true
      volumes:
      - name: config
        configMap:
          name: config
      - name: job-config
        configMap:
          name: job-config
      - name: github-token
        secret:
          secretName: k8s-infra-ci-robot-github-token
      - name: kubeconfig
        secret:
          defaultMode: 420
          secretName: k8s-infra-build-clusters-kubeconfig
