apps/prow/cluster/statusreconciler_deployment.yaml
# Copyright 2021 The Kubernetes Authors All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: prow
  name: statusreconciler
  labels:
    app: statusreconciler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: statusreconciler
  template:
    metadata:
      labels:
        app: statusreconciler
    spec:
      serviceAccountName: statusreconciler
      terminationGracePeriodSeconds: 180
      containers:
      - name: statusreconciler
        image: gcr.io/k8s-prow/status-reconciler:v20221108-d3ce231cb9
        imagePullPolicy: Always
        args:
        - --config-path=/etc/config/config.yaml
        - --continue-on-error=true
        - --dry-run=false
        - --github-token-path=/etc/github/token
        - --github-endpoint=http://ghproxy.prow.svc.cluster.local
        - --github-endpoint=https://api.github.com
        - --job-config-path=/etc/job-config
        - --plugin-config=/etc/plugins/plugins.yaml
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - "ALL"
          privileged: false
          readOnlyRootFilesystem: true
        volumeMounts:
        - name: github-token
          mountPath: /etc/github
          readOnly: true
        - name: config
          mountPath: /etc/config
          readOnly: true
        - name: job-config
          mountPath: /etc/job-config
          readOnly: true
        - name: plugins
          mountPath: /etc/plugins
          readOnly: true
      volumes:
      - name: github-token
        secret:
          defaultMode: 420
          secretName: k8s-infra-ci-robot-github-token
      - name: config
        configMap:
          name: config
      - name: job-config
        configMap:
          name: job-config
      - name: plugins
        configMap:
          name: plugins
