apps/prow/cluster/tide_deployment.yaml
# Copyright 2021 The Kubernetes Authors All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: prow
  name: tide
  labels:
    app: tide
spec:
  replicas: 1 # Do not scale up.
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: tide
  template:
    metadata:
      labels:
        app: tide
    spec:
      serviceAccountName: tide
      containers:
      - name: tide
        image: gcr.io/k8s-prow/tide:v20211115-e14c34d581
        args:
        - --config-path=/etc/config/config.yaml
        - --dry-run=false
        - --github-endpoint=http://ghproxy.prow.svc.cluster.local
        - --github-endpoint=https://api.github.com
        - --github-token-path=/etc/github/token
        - --gcs-credentials-file=/etc/gcs-credentials/service-account.json
        - --job-config-path=/etc/job-config
        - --history-uri=gs://k8s-infra-prow-results/tide-history.json
        - --status-path=gs://k8s-infra-prow-results/tide-status-checkpoint.yaml
        ports:
        - name: http
          containerPort: 8888
        - name: metrics
          containerPort: 9090
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - "ALL"
          privileged: false
        volumeMounts:
        - name: github-token
          mountPath: /etc/github
          readOnly: true
        - name: config
          mountPath: /etc/config
          readOnly: true
        - name: job-config
          mountPath: /etc/job-config
          readOnly: true
        - name: gcs-credentials
          mountPath: /etc/gcs-credentials
          readOnly: true
      volumes:
      - name: github-token
        secret:
          defaultMode: 420
          secretName: k8s-infra-ci-robot-github-token
      - name: gcs-credentials
        secret:
          defaultMode: 420
          secretName: k8s-infra-prow-sa-key
      - name: config
        configMap:
          name: config
      - name: job-config
        configMap:
          name: job-config
