apps/prow/cluster/ghproxy_deployment.yaml
# Copyright 2021 The Kubernetes Authors All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: prow
    component: ghproxy
  name: ghproxy
  namespace: prow
spec:
  selector:
    matchLabels:
      component: ghproxy
  replicas: 1
  strategy:
    type: "Recreate"
  template:
    metadata:
      labels:
        component: ghproxy
    spec:
      containers:
        - name: ghproxy
          image: gcr.io/k8s-prow/ghproxy:v20220930-4982ca61ab
          args:
            - --cache-dir=/cache
            - --cache-sizeGB=99
            - --serve-metrics=true
          ports:
          - name: main
            containerPort: 8888
          - name: metrics
            containerPort: 9090
          resources:
            requests:
              cpu: 2
              memory: 2Gi
            limits:
              cpu: 2
              memory: 2Gi
          securityContext:
            readOnlyRootFilesystem: true
          volumeMounts:
            - name: cache
              mountPath: /cache
      volumes:
        - name: cache
          persistentVolumeClaim:
            claimName: ghproxy
      serviceAccountName: ghproxy
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prow
    component: ghproxy
  name: ghproxy
  namespace: prow
spec:
  ports:
    - name: main
      port: 80
      targetPort: 8888
    - name: metrics
      port: 9090
  selector:
    component: ghproxy
  type: ClusterIP
