apps/prow/cluster/horologium_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: horologium
  namespace: prow
  name: horologium
spec:
  ports:
    - name: metrics
      port: 9090
  selector:
    app: horologium
